--- a/QPLeague/qpl/templates/base.html
+++ b/QPLeague/qpl/templates/base.html
@@ -1,85 +1,538 @@
 <!DOCTYPE html>
-<html>
-{% load  staticfiles %}
-    <head>
-        <title>QPL</title>
+<html class="no-js" lang="en">
+{% load staticfiles %}  
+<head>
+    <!-- Basic Page Needs
+    ================================================== -->
+    <meta charset="utf-8">
+    <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Official website of Qburst Premier League</title>
+    <meta name="description" content="Official website of Qburst Premier League" >
+    <meta name="keywords" content="Qburst, football, club, Qburst Calicut, QPL">
+    <meta name="author" content="vysaghsekhar"> 
+	
+	<!-- ==============================================
+	Favicons
+	=============================================== -->
+	<link rel="shortcut icon" href="{% static 'qpl/images/favicon.ico' %}">
+	<link rel="apple-touch-icon" href="{% static 'qpl/images/apple-touch-icon.png'%}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{% static 'qpl/images/apple-touch-icon-72x72.png'%}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{% static 'qpl/images/apple-touch-icon-114x114.png' %}">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/0.5.6/css/ngDialog.css">
+	
+	<!-- ==============================================
+	CSS
+	=============================================== -->
+	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/bootstrap.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/font-awesome.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/owl.carousel.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/owl.theme.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static  'qpl/css/magnific-popup.css' %}">
+	
+	
+	<!-- ==============================================
+	Google Fonts
+	=============================================== -->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,greek' rel='stylesheet' type='text/css'>
+	
+	<!-- ==============================================
+	Custom Stylesheet
+	=============================================== -->
 	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/style.css' %}" />
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    </head>
+	
+	
+	
+	<script type="text/javascript" src="{% static 'qpl/js/modernizr.min.js' %}"></script>
+	
+	
 
-    <body>
+</head>
 
-<div class="header-level-1 red-bar clearfix">
-<div class="nav-bar">
-    <div class="search-box">
-        <span></span>
+<body ng-app = "qpl" ng-controller = "qplController">
+	
+	<!-- Load page -->
+	<div class="animationload">
+		<div class="loader"></div>
+	</div>
+	
+	
+	<!-- NAVBAR SECTION -->
+	<div class="navbar navbar-fixed-top">
+		<div class="header-top">
+			<div class="container">
+				<div class="row">
+					<div class="">
+						<div class="info">
+							<div class="info-item">
+								<div>Official website of Qburst Premier League</div>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</div>
     </div>
-    <div class="main-nav">
 
+ 
+	<!-- BANNER -->
+	<div class="section banner" >
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			
 
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner" role="listbox">
+				<div class="item active"><img src="{% static 'qpl/images/slide-1.jpg' %}" alt="..."></div></div>
+		</div>
 
+		<!-- END CAROUSEL -->
+		
+	</div>
+	
+		
+	<!-- MATCH FACTS --> 
+	<div class="section stat-facts" id="index">
+		<!-- <div class="bg-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-10 col-md-offset-1">
+						<div class="row">
+							
+							<div class="col-sm-4 col-md-4">
+								<div class="match-club">
+									<img src="images/club-fc-1.png" alt="" />
+									<div class="club-name">ABCDE FC</div>
+								</div>
+							</div>
+							
+							<div class="col-sm-4 col-md-4">
+								<div class="match-description">
+									<div class="liga-name">12</div>
+									<div class="liga-date">January 12, 6:45 AM</div>
+									<div class="liga-vs">VS</div>
+									<div class="liga-location">Zamorins School Ground, Calicut</div>
+								</div>
+							</div>
+							
+							<div class="col-sm-4 col-md-4">
+								<div class="match-club">
+									<img src="images/club-fc-2.png" alt="" />
+									<div class="club-name">Atletico De QB</div>
+								</div>
+							</div>
+							
+						</div>
+ -->					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
+	<!-- ABOUT SECTION -->
+	<div class="section about">
+		<div class="container">
+			
+			<div class="row">
+				<div class="col-sm-12 col-md-12">
+					<div class="page-title">
+						<h2 class="lead">League Table</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				
+				
+				<div class="col-sm-12 col-md-12">
+					
+					  <div class="table-responsive" id="team">
+									
+								</div>
+					
+				</div>
+				
+				
+			</div>
+	
+			<div class="row">
+				
+				
+				<div class="col-sm-12 col-md-12">
+					
+					  <div class="table-responsive" id="standings">
+									
+								</div>
+					
+				</div>
+				
+				
+			</div>
+		</div>
+	</div>
+	
+	
+	<!-- GALLERY SECTION -->
+	<div class="section gallery bg-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-12">
+					<div class="page-title">
+					</div>
+				</div>
+			</div>
+			<div class="row popup-gallery">
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-1.jpg' %}" title="Gallery #1">
+							<img src="{% static 'qpl/images/gallery-1.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-2.jpg' %}" title="Gallery #2">
+							<img src="{% static 'qpl/images/gallery-2.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-3.jpg' %}" title="Gallery #3">
+							<img src="{% static 'qpl/images/gallery-3.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-4.jpg' %}" title="Gallery #4">
+							<img src="{% static 'qpl/images/gallery-4.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-5.jpg' %}" title="Gallery #5">
+							<img src="{% static 'qpl/images/gallery-5.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-6.jpg' %}" title="Gallery #6">
+							<img src="{% static 'qpl/images/gallery-6.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-7.jpg' %}" title="Gallery #1">
+							<img src="{% static 'qpl/images/gallery-7.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-xs-4 col-sm-3 col-md-3">
+					<div class="w-item">
+						<a href="{% static 'qpl/images/gallery-8.jpg' %}" title="Gallery #1">
+							<img src="{% static 'qpl/images/gallery-8.jpg' %}" alt="" class="img-responsive" />
+							<div class="project-info">
+								<div class="project-icon">
+									<span class="fa fa-search"></span>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				
+			</div>
+			
+			
+		</div>
+	</div>
 
-        <ul>
-		<li class=" active"> <a href="/">Home</a></li>
-		<li class=" active"> <a href="/fixtures">Fixtures</a></li>
+	
+	<!-- OUR PLAYER SECTION -->
+	<div class="section player" >
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-12">
+					<div class="page-title">
+						<h2 class="lead">Top Scorers</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div id="player-caro" class="owl-carousel owl-theme">
+				
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-1.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								DAVID BECKMAN
+							</div>
+							<div class="position">
+								<span class="cf">4</span> NightHawks FC
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-2.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								GUILUGI BUTTON
+							</div>
+							<div class="position">
+								<span class="gk">4</span> ABCDE FC
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-3.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								ALEXANDRO NISTA
+							</div>
+							<div class="position">
+								<span class="cb">3</span>  Atletico De QB
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-4.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								DAVID BECKMAN
+							</div>
+							<div class="position">
+								<span class="rmf">3</span> 	RedBull FC  
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-5.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								CHRISTIAN RONALDOEL
+							</div>
+							<div class="position">
+								<span class="cf">2</span> ABCDE FC
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-2.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								GUILUGI BUTTON
+							</div>
+							<div class="position">
+								<span class="gk">2</span> RedBull FC
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-3.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								ALEXANDRO NISTA
+							</div>
+							<div class="position">
+								<span class="cb">1</span> RedBull FC
+							</div>
+						</div>
+					</div>
+					
+					<div class="item player-item">
+						<div class="gambar">
+							<img src="{% static 'qpl/images/player-4.jpg' %}" alt="" class="img-responsive">
+						</div>
+						<div class="item-body">
+							<div class="name">
+								DAVID BECKMAN
+							</div>
+							<div class="position">
+								<span class="rmf">1</span> ABCDE FC
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+			
+			<div class="player-pagination pagination">
+				
+			</div>
+			
+		</div>
+	</div>
 
-		<li class=""> <a href="#">Season 2015</a>  
-			<span class="sub-nav-ar"></span> 
-				<div class="main-sub-nav"> <div class="sub-links-wrp"> 
-						<ul>
-							<li> <a href="/fixtures">Results</a></li>
-							<li> <a href="/standings">Standings</a></li>
-							<li> <a href="/stats">Statistics</a></li>
-							<li> <a href="/tournament-tracker">League Tracker</a></li>
-							<li> <a href="/isl-2015/awards">Awards</a></li>
-						</ul> 
-		</div></div></li>
-		<li class=""> <a href="#">Teams</a> 
-			<span class="sub-nav-ar"></span>
-				<div class="main-sub-nav"> <div class="sub-links-wrp"> 
-						<ul>
-							{% for team in teams_all %}
-							<li> <a href="/teams/{{team.name}}"> {{team.name}}</a></li>
-							{% endfor %}
-						</ul>
-		</div></div></li>
-		<li class=""> </div></li><li class=""> <a href="#">Galleries</a>
-			<span class="sub-nav-ar"></span>
-				<div class="main-sub-nav"> <div class="sub-links-wrp"> 
-						<ul><li> <a href="/videos">Videos</a></li>
-							<li> <a href="/photos">Photo Galleries</a></li>
-			</ul> </div></div></li>
-	<li class=""> <a href="#">About QPL</a>  <span class="sub-nav-ar"></span> 
-		<div class="main-sub-nav"> <div class="sub-links-wrp"> <ul>
-					<li> <a href="/about-indian-super-league">About ISL</a></li>
-					<li> <a href="/chairpersons-message">Chairperson's Message</a></li>
-					<li> <a href="http://www.indiansuperleague.com/news/2338-hero-isl-2015-covered-across-platforms">Broadcasters</a></li>
-	<li> <a href="/contact-us">Contact Us</a></li></ul> </div></div></li></ul>
+	
+	
 
-    </div>
-    
-</div>
-<div class="clr"></div>
-<div class="search-bar" style="display: none;">
-    <div><input placeholder="Search" type="text" class="menuSearchTB"></div>
-</div>
+	 
+	
+	
+	
+	<!-- CLIENT SECTION --> 
+	<div class="section stat-client p-main bg-client">
+		<div class="container">
+			<div class="row">
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client1.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client2.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client3.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client4.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client5.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				<div class="col-xs-6 col-sm-6 col-md-2 col-lg-2">
+					<div class="client-img">
+						<img src="{% static 'qpl/images/client6.png' %}" alt="" class="img-responsive" />
+					</div>
+				</div>
+				
+				
+			</div>
+		</div>
+	</div>
+	
+	
+	
+	<!-- FOOTER SECTION -->
+	<div class="footer">
+	
+		<div class="f-desc">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="footer-item">
+							<div class="footer-title">
+								<h4>ABOUT QPL</h4>
+							</div>
+							<p>This template is a micro niche for business categories, namely Pro Soccer business. there was an excess of this template is using HTML/CSS. Condimentum aliquam, mollit magna velit nec, tempor cursus vitae sit aliquet neque purus. Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus</p>
+							
+						</div>
+					</div>
+					
+					
+				</div>
+			</div>
+				
+		</div>
+		
+		<div class="fcopy">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+						<p class="ftex">&copy; 2015 Pro Soccer by Rudhi Sasmito - All Rights Reserved</p> 
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	
+	
+	
+	
+	<script type="text/javascript" src="{% static 'qpl/js/jquery.min.js' %}"></script>
+	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=4.1.5'></script>
+	<script type='text/javascript' src="{% static 'qpl/js/jqBootstrapValidation.js' %}"></script>
+	<script type="text/javascript" src="{% static 'qpl/js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'qpl/js/owl.carousel.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'qpl/js/bootstrap-hover-dropdown.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'qpl/js/jquery.magnific-popup.min.js' %}"></script>
+	
+	<script type="text/javascript" src="{% static 'qpl/js/script.js' %}"></script>
+	<script type="text/javascript" src="https://code.angularjs.org/1.4.0/angular.min.js"></script>
+	<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/0.5.6/js/ngDialog.js"></script>
+	<script type="text/javascript" src = "{% static 'qpl/js/qplCtrl.js' %}"></script>
+	
+	
+	
+</body>
 
-<div>
-    <script type="text/javascript">
-
-        $(document).ready(function () {
-
-            var mSearchItemCnt = 6;
-
-            //$(".container").removeClass("container");
-            SI_ISL.search(mSearchItemCnt);
-        });
-
-    </script>
-
-</div>
-
-        </div>
-    {% block content %}{% endblock content %}
-    </body>
+<!-- Mirrored from rudhisasmito.com/demo/prosoccer/index.html by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 11 Jan 2016 06:59:42 GMT -->
 </html>
