--- a/QPLeague/qpl/templates/base.html
+++ b/QPLeague/qpl/templates/base.html
@@ -41,11 +41,10 @@
 	Custom Stylesheet
 	=============================================== -->
 	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/style.css' %}" />
-	
+	<link rel="stylesheet" type="text/css" href="{% static 'qpl/css/ngDialog-theme-default.css' %}" />
 	
 	
 	<script type="text/javascript" src="{% static 'qpl/js/modernizr.min.js' %}"></script>
-	
 	
 
 </head>
@@ -66,7 +65,7 @@
 					<div class="">
 						<div class="info">
 							<div class="info-item">
-								<div>Official website of Qburst Premier League</div>
+								<div ng-click="open()">Official website of Qburst Premier League</div>
 							</div>
 						</div>
 					</div>
@@ -513,25 +512,19 @@
 		</div>
 		
 	</div>
-	
-	
-	
-	
-	<script type="text/javascript" src="{% static 'qpl/js/jquery.min.js' %}"></script>
+		<script type="text/javascript" src="{% static 'qpl/js/jquery.min.js' %}"></script>
 	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false&amp;ver=4.1.5'></script>
 	<script type='text/javascript' src="{% static 'qpl/js/jqBootstrapValidation.js' %}"></script>
 	<script type="text/javascript" src="{% static 'qpl/js/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'qpl/js/owl.carousel.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'qpl/js/bootstrap-hover-dropdown.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'qpl/js/jquery.magnific-popup.min.js' %}"></script>
-	
+
+		
 	<script type="text/javascript" src="{% static 'qpl/js/script.js' %}"></script>
 	<script type="text/javascript" src="https://code.angularjs.org/1.4.0/angular.min.js"></script>
 	<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/ng-dialog/0.5.6/js/ngDialog.js"></script>
 	<script type="text/javascript" src = "{% static 'qpl/js/qplCtrl.js' %}"></script>
-	
-	
-	
 </body>
 
 <!-- Mirrored from rudhisasmito.com/demo/prosoccer/index.html by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 11 Jan 2016 06:59:42 GMT -->
