--- a/QPLeague/qpl/templates/qpl/standings.html
+++ b/QPLeague/qpl/templates/qpl/standings.html
@@ -17,7 +17,7 @@
     <td class="match-title"> <img width="20px" height="20px"></td>
 
     <td class="match-title">
-    <div  ng-click="openTeam('{{standing.team.name}}')">{{standing.team.name}}</div></td>
+    <div class="teamname" ng-click="openTeam('{{standing.team.name}}')">{{standing.team.name}}</div></td>
     <td class="match-title">{{standing.GP}}</td>
     <td class="match-title">{{standing.GW}}</td>
     <td class="match-title">{{standing.GD}}</td>
