Added fixture frontend

--- a/QPLeague/qpl/templates/base.html
+++ b/QPLeague/qpl/templates/base.html
@@ -157,19 +157,6 @@
 				
 			</div>
 	
-			<div class="row">
-				
-				
-				<div class="col-sm-12 col-md-12">
-					
-					  <div class="table-responsive" id="standings">
-									
-								</div>
-					
-				</div>
-				
-				
-			</div>
 		</div>
 	</div>
 	
@@ -424,8 +411,47 @@
 		</div>
 	</div>
 
+    <!--FIXTURE-->
+    <div class="section about">
+		<div class="container">
+			
+			<div class="row">
+				<div class="col-sm-12 col-md-12">
+					<div class="page-title">
+						<h2 class="lead">FIXTURES</h2>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				
+				
+				<div class="col-sm-12 col-md-12">
+					
+					  <div class="table-responsive" id="fixture">
+									
+								</div>
+					
+				</div>
+				
+				
+			</div>
 	
-	
+			<div class="row">
+				
+				
+				<div class="col-sm-12 col-md-12">
+					
+					  <div class="table-responsive" id="standings">
+									
+								</div>
+					
+				</div>
+				
+				
+			</div>
+		</div>
+	</div>
 
 	 
 	
