--- a/QPLeague/qpl/templates/qpl/fixture.html
+++ b/QPLeague/qpl/templates/qpl/fixture.html
@@ -1,7 +1,7 @@
 {% block content %}
    
    
-<div class=""><table class="pure-table pure-table-horizontal" style="margin 0 auto;">
+<div class=""><table class="table table-striped" style="margin 0 auto;">
 <colgroup>
 <col style="width: 30px">
 <col style="width: 264px">
