--- a/QPLeague/qpl/templates/qpl/fixture.html
+++ b/QPLeague/qpl/templates/qpl/fixture.html
@@ -1,14 +1,11 @@
 {% block content %}
    
-   
-<div class=""><table class="table table-striped" style="margin 0 auto;">
-<colgroup>
-<col style="width: 30px">
-<col style="width: 264px">
-<col style="width: 30px">
-<col style="width: 149px">
-<col style="width: 147px">
-</colgroup>
+
+
+
+<div class=""><table class="pure-table pure-table-horizontal" style="margin 0 auto;">
+
+
   <tr>
     <th></th>
     <th></th>
